--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Satyendra Yadav",
   "license": "ISC",
   "devDependencies": {
+    "light-server": "^2.2.1",
     "lite-server": "^2.2.2"
   },
   "dependencies": {
