--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/"
   },
   "author": "Satyendra Yadav",
   "license": "ISC",
   "devDependencies": {
     "light-server": "^2.2.1",
-    "lite-server": "^2.2.2"
+    "lite-server": "^2.2.2",
+    "node-sass": "^4.5.3"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
